--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <header></header>
 
     <main>
-        
+        <!-- div container -->
+        <div class="container clearfix">
+            <h1>Meet Our Team</h1>
+            <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, dolores corporis illum iusto quod non nam. Maiores ipsam dolorum adipisci deserunt? Labore, dolores beatae praesentium eaque blanditiis fugit? Quaerat, nihil!</p>
+            
+        </div>
+        <!-- /div container -->
     </main>
 
     <footer></footer>
