Fixed: sost "div" main with "section"

--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meet Our Team</title>
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;700&display=swap" rel="stylesheet">
-    <!-- Google Fonts -->
-    <link rel="stylesheet" href="CSS/style.css">
-</head>
-<body>
-    <header></header>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Meet Our Team</title>
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;700&display=swap" rel="stylesheet">
+        <!-- Google Fonts -->
+        <link rel="stylesheet" href="CSS/style.css">
+    </head>
+    <body>
+        <header></header>
 
-    <main>
-        <!-- div container -->
-        <div class="container clearfix">
-            <h1>Meet Our Team</h1>
-            <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, dolores corporis illum iusto quod non nam. Maiores ipsam dolorum adipisci deserunt? Labore, dolores beatae praesentium eaque blanditiis fugit? Quaerat, nihil!</p>
-            
-        </div>
-        <!-- /div container -->
-    </main>
+        <main>
+            <!-- section container -->
+            <section class="container clearfix">
+                <h1>Meet Our Team</h1>
+                <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, dolores corporis illum iusto quod non nam. Maiores ipsam dolorum adipisci deserunt? Labore, dolores beatae praesentium eaque blanditiis fugit? Quaerat, nihil!</p>
+                <!-- add card team -->
+                <div class="team-card">
+                    
+                </div>
+                <!-- /add card team -->
+            </section>
+            <!-- /section container -->
+        </main>
 
-    <footer></footer>
-</body>
+        <footer></footer>
+    </body>
 </html>
