Add scheletro cards-team

--- a/index.html
+++ b/index.html
@@ -20,9 +20,40 @@
             <section class="container clearfix">
                 <h1>Meet Our Team</h1>
                 <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, dolores corporis illum iusto quod non nam. Maiores ipsam dolorum adipisci deserunt? Labore, dolores beatae praesentium eaque blanditiis fugit? Quaerat, nihil!</p>
-                <!-- add card team -->
+                
+                <!-- add card team 1#-->
                 <div class="team-card">
-                    
+
+                </div>
+                <!-- /add card team -->
+
+                <!-- add card team 2#-->
+                <div class="team-card">
+
+                </div>
+                <!-- /add card team -->
+
+                <!-- add card team 3#-->
+                <div class="team-card">
+
+                </div>
+                <!-- /add card team -->
+
+                <!-- add card team 4#-->
+                <div class="team-card">
+
+                </div>
+                <!-- /add card team -->
+
+                <!-- add card team 5#-->
+                <div class="team-card">
+
+                </div>
+                <!-- /add card team -->
+
+                <!-- add card team 6#-->
+                <div class="team-card">
+
                 </div>
                 <!-- /add card team -->
             </section>
