Finished 1st card team

--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
                 <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, dolores corporis illum iusto quod non nam. Maiores ipsam dolorum adipisci deserunt? Labore, dolores beatae praesentium eaque blanditiis fugit? Quaerat, nihil!</p>
                 
                 <!-- add card team 1#-->
-                <div class="team-card">
-
+                <div class="team-card clearfix">
+                    <img class="img-cards" id="" src="img/male1.png" alt="male1">
+                    <div class="info-team-card clearfix">
+                        <h3>MARCO BIANCHI</h3>
+                        <span>Designer</span>
+                        <a href="mailto:marcobianchi@team.com">marcobianchi@team.coms</a>
+                    </div>
                 </div>
                 <!-- /add card team -->
 
