Add all team cards

--- a/index.html
+++ b/index.html
@@ -27,38 +27,63 @@
                     <div class="info-team-card clearfix">
                         <h3>MARCO BIANCHI</h3>
                         <span>Designer</span>
-                        <a href="mailto:marcobianchi@team.com">marcobianchi@team.coms</a>
+                        <a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a>
                     </div>
                 </div>
                 <!-- /add card team -->
 
                 <!-- add card team 2#-->
-                <div class="team-card">
-
+                <div class="team-card clearfix">
+                    <img class="img-cards" id="" src="img/female1.png" alt="male1">
+                    <div class="info-team-card clearfix">
+                        <h3>LAURA ROSSI</h3>
+                        <span>Front-end Developer</span>
+                        <a href="mailto:laurarossi@team.com">laurarossi@team.com</a>
+                    </div>
                 </div>
                 <!-- /add card team -->
 
                 <!-- add card team 3#-->
-                <div class="team-card">
-
+                <div class="team-card clearfix">
+                    <img class="img-cards" id="" src="img/male2.png" alt="male1">
+                    <div class="info-team-card clearfix">
+                        <h3>GIORGIO VERDI</h3>
+                        <span>Back-end Developer</span>
+                        <a href="mailto:giorgioverdi@team.com">giorgioverdi@team.com</a>
+                    </div>
                 </div>
                 <!-- /add card team -->
 
                 <!-- add card team 4#-->
-                <div class="team-card">
-
+                <div class="team-card clearfix">
+                    <img class="img-cards" id="" src="img/female2.png" alt="male1">
+                    <div class="info-team-card clearfix">
+                        <h3>MARTA IPSUM</h3>
+                        <span>SEO Specialist</span>
+                        <a href="mailto:martaipsum@team.com">martaipsum@team.com</a>
+                    </div>
                 </div>
                 <!-- /add card team -->
 
                 <!-- add card team 5#-->
-                <div class="team-card">
-
+                <div class="team-card clearfix">
+                    <img class="img-cards" id="" src="img/male3.png" alt="male1">
+                    <div class="info-team-card clearfix">
+                        <h3>ROBERTO LOREM</h3>
+                        <span>Project Manager</span>
+                        <a href="mailto:robertolorem@team.com">robertolorem@team.com</a>
+                    </div>
                 </div>
                 <!-- /add card team -->
 
                 <!-- add card team 6#-->
-                <div class="team-card">
-
+                <div class="team-card clearfix">
+                    <img class="img-cards" id="" src="img/female3.png" alt="male1">
+                    <div class="info-team-card clearfix">
+                        <h3>DANIELA AMET</h3>
+                        <span>Analyst</span>
+                        <a href="mailto:danielaamet@team.com">danielamet@team.com</a>
+                    </div>
                 </div>
                 <!-- /add card team -->
             </section>
