Deleted empty ID

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
                 <!-- add card team 1#-->
                 <div class="team-card clearfix">
-                    <img class="img-cards" id="" src="img/male1.png" alt="male1">
+                    <img class="img-cards" src="img/male1.png" alt="male1">
                     <div class="info-team-card clearfix">
                         <h3>MARCO BIANCHI</h3>
                         <span>Designer</span>
@@ -34,7 +34,7 @@
 
                 <!-- add card team 2#-->
                 <div class="team-card clearfix">
-                    <img class="img-cards" id="" src="img/female1.png" alt="male1">
+                    <img class="img-cards" src="img/female1.png" alt="male1">
                     <div class="info-team-card clearfix">
                         <h3>LAURA ROSSI</h3>
                         <span>Front-end Developer</span>
@@ -45,7 +45,7 @@
 
                 <!-- add card team 3#-->
                 <div class="team-card clearfix">
-                    <img class="img-cards" id="" src="img/male2.png" alt="male1">
+                    <img class="img-cards" src="img/male2.png" alt="male1">
                     <div class="info-team-card clearfix">
                         <h3>GIORGIO VERDI</h3>
                         <span>Back-end Developer</span>
@@ -56,7 +56,7 @@
 
                 <!-- add card team 4#-->
                 <div class="team-card clearfix">
-                    <img class="img-cards" id="" src="img/female2.png" alt="male1">
+                    <img class="img-cards" src="img/female2.png" alt="male1">
                     <div class="info-team-card clearfix">
                         <h3>MARTA IPSUM</h3>
                         <span>SEO Specialist</span>
@@ -67,7 +67,7 @@
 
                 <!-- add card team 5#-->
                 <div class="team-card clearfix">
-                    <img class="img-cards" id="" src="img/male3.png" alt="male1">
+                    <img class="img-cards" src="img/male3.png" alt="male1">
                     <div class="info-team-card clearfix">
                         <h3>ROBERTO LOREM</h3>
                         <span>Project Manager</span>
@@ -78,7 +78,7 @@
 
                 <!-- add card team 6#-->
                 <div class="team-card clearfix">
-                    <img class="img-cards" id="" src="img/female3.png" alt="male1">
+                    <img class="img-cards" src="img/female3.png" alt="male1">
                     <div class="info-team-card clearfix">
                         <h3>DANIELA AMET</h3>
                         <span>Analyst</span>
